<resources>
    <string name="app_name">Canada Charter</string>
    <string name="menu__spread_the_word">Spread the word!</string>
    <string name="know_your_rights_with_canada_charter">Know your rights with Canada Charter: </string>
    <string name="actionbar__guarantee_of_rights_and_freedoms">Guarantee of Rights and Freedoms</string>
    <string name="actionbar__fundamental_freedoms">Fundamental Freedoms</string>
    <string name="actionbar__democratic_rights">Democratic Rights</string>
    <string name="actionbar__mobility_rights">Mobility Rights</string>
    <string name="actionbar__legal_rights">Legal Rights</string>
    <string name="actionbar__equality_rights">Equality Rights</string>
    <string name="actionbar__official_languages_of_canada">Official Languages of Canada</string>
    <string name="actionbar__minority_language_educational_rights">Minority Language Educational Rights</string>
    <string name="actionbar__enforcement">Enforcement</string>
    <string name="actionbar__general">General</string>
    <string name="actionbar__application_of_charter">Application of Charter</string>
    <string name="actionbar__about">About</string>
    <string name="guarantee_of_rights_and_freedoms">GUARANTEE OF RIGHTS AND FREEDOMS</string>
    <string name="fundamental_freedoms">FUNDAMENTAL FREEDOMS</string>
    <string name="democratic_rights">DEMOCRATIC RIGHTS</string>
    <string name="mobility_rights">MOBILITY RIGHTS</string>
    <string name="legal_rights">LEGAL RIGHTS</string>
    <string name="equality_rights">EQUALITY RIGHTS</string>
    <string name="official_languages_of_canada">OFFICIAL LANGUAGES OF CANADA</string>
    <string name="minority_language_educational_rights">MINORITY LANGUAGE EDUCATIONAL RIGHTS</string>
    <string name="enforcement">ENFORCEMENT</string>
    <string name="general">GENERAL</string>
    <string name="application_of_charter">APPLICATION OF CHARTER</string>
    <string name="shortcut_legal_rights">Legal Rights</string>
    <string name="shortcut_read_your_legal_rights">Read Your Legal Rights</string>
    <string name="created_by_sweeper3000">Created by sweeper3000.</string>
    <string name="sweeper3000_on_github">\@sweeper3000 on GitHub.</string>
    <string name="see_the_code">SEE THE CODE</string>
    <string name="original_text">The original source of the Charter can be found on the Justice Laws\' website.</string>
    <string name="canadian_charter_of_rights_and_freedoms">CANADIAN CHARTER OF RIGHTS AND FREEDOMS</string>
    <string name="canada_founded_on_rule_of_law">Whereas Canada is founded upon principles that recognize the supremacy of God and the rule of law:</string>
    <string name="tap_the_buttons_to_go_to_a_section">Tap the buttons to go to a section.</string>
    <string name="rights_and_freedoms_in_canada">Rights and freedoms in Canada</string>
    <string name="charter_guarantees_freedoms_but_with_limits">\t 1. The Canadian Charter of Rights and Freedoms guarantees the rights and freedoms set out in it subject only to such reasonable limits prescribed by law as can be demonstrably justified in a free and democratic society.</string>
    <string name="fundamental_freedoms_lower_case">Fundamental Freedoms</string>
    <string name="everyone_has_the_following_fundamental_freedoms">\t 2. Everyone has the following fundamental freedoms:</string>
    <string name="freedom_of_conscience_and_religion">\t (a) freedom of conscience and religion;</string>
    <string name="freedom_of_speech_and_expression">\t (b) freedom of thought, belief, opinion and expression, including freedom of the press and other media of communication;</string>
    <string name="freedom_of_peaceful_assembly">\t (c) freedom of peaceful assembly; and</string>
    <string name="freedom_of_association">\t (d) freedom of association.</string>
    <string name="democratic_rights_of_citizens">Democratic rights of citizens</string>
    <string name="every_citizen_has_right_to_vote_and_hold_office">\t 3. Every citizen of Canada has the right to vote in an election of members of the House of Commons or of a legislative assembly and to be qualified for membership therein.</string>
    <string name="maximum_duration_of_legislative_bodies">Maximum duration of legislative bodies</string>
    <string name="life_liberty_and_security_of_the_person">Life, liberty and security of person</string>
    <string name="everyone_has_right_of_life_liberty_and_security_and_right_not_to_be_deprived_of_it_except_through_fundamental_justice">\t 7. Everyone has the right to life, liberty and security of the person and the right not to be deprived thereof except in accordance with the principles of fundamental justice.</string>
    <string name="search_or_seizure">Search or seizure</string>
    <string name="everyone_has_the_right_to_be_secure_against_unreasonable_search_or_seizure">\t 8. Everyone has the right to be secure against unreasonable search or seizure.</string>
    <string name="detention_or_imprisonment">Detention or imprisonment</string>
    <string name="everyone_has_the_right_not_to_be_arbitrarily_detained_or_imprisoned">\t 9. Everyone has the right not to be arbitrarily detained or imprisoned.</string>
    <string name="arrest_or_detention">Arrest or detention</string>
    <string name="everyone_has_the_right_on_arrest_or_detention">\t 10. Everyone has the right on arrest or detention</string>
    <string name="to_be_informed_promptly_of_the_reasons_therefor">\t (a) to be informed promptly of the reasons therefor;</string>
    <string name="to_retain_and_instruct_counsel_without_delay_and_to_be_informed_of_that_right">\t (b) to retain and instruct counsel without delay and to be informed of that right; and</string>
    <string name="to_have_validity_of_detention_determined_and_released_if_detention_is_unlawful">\t (c) to have the validity of the detention determined by way of habeas corpus and to be released if the detention is not lawful.</string>
    <string name="proceedings_in_criminal_and_penal_matters">Proceedings in criminal and penal matters</string>
    <string name="any_person_charged_with_an_offence_has_the_right">\t 11. Any person charged with an offence has the right</string>
    <string name="to_be_informed_without_unreasonable_delay_of_the_specific_offence">\t (a) to be informed without unreasonable delay of the specific offence;</string>
    <string name="to_be_tried_within_a_reasonable_time">\t (b) to be tried within a reasonable time;</string>
    <string name="not_to_be_compelled_to_be_a_witness_in_proceedings_against_that_person_in_respect_of_the_offence">\t (c) not to be compelled to be a witness in proceedings against that person in respect of the offence;</string>
    <string name="to_be_presumed_innocent_until_proven_guilty">\t (d) to be presumed innocent until proven guilty according to law in a fair and public hearing by an independent and impartial tribunal;</string>
    <string name="not_to_be_denied_reasonable_bail_without_just_cause">\t (e) not to be denied reasonable bail without just cause;</string>
    <string name="to_have_trial_by_jury_unless_military_tribunal">\t (f) except in the case of an offence under military law tried before a military tribunal, to the benefit of trial by jury where the maximum punishment for the offence is imprisonment for five years or a more severe punishment;</string>
    <string name="not_be_tried_if_offence_was_not_illegal_before_offense_was_committed">\t (g) not to be found guilty on account of any act or omission unless, at the time of the act or omission, it constituted an offence under Canadian or international law or was criminal according to the general principles of law recognized by the community of nations;</string>
    <string name="if_acquitted_of_offense_to_not_be_tried_again_and_not_be_punished_more_than_once_for_one_offence">\t (h) if finally acquitted of the offence, not to be tried for it again and, if finally found guilty and punished for the offence, not to be tried or punished for it again; and</string>
    <string name="if_found_guilty_and_offence_varied_over_time_to_be_benefit_of_the_lesser_punishment">\t (i) if found guilty of the offence and if the punishment for the offence has been varied between the time of commission and the time of sentencing, to the benefit of the lesser punishment.</string>
    <string name="treatment_or_punishment">Treatment or punishment</string>
    <string name="no_cruel_or_unusual_punishment">\t 12. Everyone has the right not to be subjected to any cruel and unusual treatment or punishment.</string>
    <string name="self_crimination">Self-crimination</string>
    <string name="witnesses_have_right_not_to_incriminate_themselves">\t 13. A witness who testifies in any proceedings has the right not to have any incriminating evidence so given used to incriminate that witness in any other proceedings, except in a prosecution for perjury or for the giving of contradictory evidence.</string>
    <string name="interpreter">Interpreter</string>
    <string name="right_to_interpreter">\t 14. A party or witness in any proceedings who does not understand or speak the language in which the proceedings are conducted or who is deaf has the right to the assistance of an interpreter.</string>
    <string name="application_of_charter__small">Application of Charter</string>
    <string name="this_charter_applies">\t 32. (1) This Charter applies</string>
    <string name="to_the_entire_canadian_government_system">\t (a) to the Parliament and government of Canada in respect of all matters within the authority of Parliament including all matters relating to the Yukon Territory and Northwest Territories; and</string>
    <string name="to_the_provincial_governments">\t (b) to the legislature and government of each province in respect of all matters within the authority of the legislature of each province.</string>
    <string name="exception">Exception</string>
    <string name="section_15_shall_not_have_effect_until_three_years_after_this_section_comes_into_power">\t (2) Notwithstanding subsection (1), section 15 shall not have effect until three years after this section comes into force.</string>
    <string name="exception_where_express_declaration">Exception where express declaration</string>
    <string name="governments_can_override_section_2_or_7_to_15">\t 33. (1) Parliament or the legislature of a province may expressly declare in an Act of Parliament or of the legislature, as the case may be, that the Act or a provision thereof shall operate notwithstanding a provision included in section 2 or sections 7 to 15 of this Charter.</string>
    <string name="operation_of_exception">Operation of exception</string>
    <string name="an_act_or_a_provision_of_an_act_in_respect_of_which_a_declaration_made_under_this_section_is_in_effect_shall_have_such_operation_as_it_would_have_but_for_the_provision_of_this_charter_referred_to_in_the_declaration">\t (2) An Act or a provision of an Act in respect of which a declaration made under this section is in effect shall have such operation as it would have but for the provision of this Charter referred to in the declaration.</string>
    <string name="five_year_limitation">Five year limitation</string>
    <string name="the_exception_has_a_five_year_limit">\t (3) A declaration made under subsection (1) shall cease to have effect five years after it comes into force or on such earlier date as may be specified in the declaration.</string>
    <string name="re_enactment">Re-enactment</string>
    <string name="an_exception_can_be_re_enacted">\t (4) Parliament or the legislature of a province may re-enact a declaration made under subsection (1).</string>
    <string name="subsection_5_applies_to_exception_rule_under_subsection_4">\t (5) Subsection (3) applies in respect of a re-enactment made under subsection (4).</string>
</resources>