<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.sweeper3000.canadacharter.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/canadian_charter_of_rights_and_freedoms" />

    <TextView
        android:id="@+id/canada_founded_on_rule_of_law"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/title"
        android:text="@string/canada_founded_on_rule_of_law" />

    <TextView
        android:id="@+id/click_buttons_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/canada_founded_on_rule_of_law"
        android:text="@string/tap_the_buttons_to_go_to_a_section" />

    <Button
        android:id="@+id/freedom_guarantee_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/click_buttons_text"
        android:layout_marginBottom="5dp"
        android:hint="@string/guarantee_of_rights_and_freedoms"
        android:onClick="toGuaranteeOfRightsAndFreedomsActivity" />

    <Button
        android:id="@+id/fundamental_freedoms_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/freedom_guarantee_button"
        android:layout_marginBottom="5dp"
        android:hint="@string/fundamental_freedoms"
        android:onClick="toFundamentalFreedomsActivity" />

    <Button
        android:id="@+id/democratic_rights_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/fundamental_freedoms_button"
        android:hint="@string/democratic_rights"
        android:onClick="toDemocraticRightsActivity" />
</RelativeLayout>
